css/index.css
@import url(./reset.css);
.wrapper {
  min-height: 100vh;
  min-width: 100%;
  font-family: "Sora", sans-serif;
  padding: 10.25rem 0;
  background-color: #fafaf9;
  color: #394150;
}
.blog-card {
  background-color: #ffffff;
  max-width: 23rem;
  padding: 1rem;
  margin: auto;
  box-shadow: 0.5rem 0.5rem 1.25rem 0rem rgba(85, 85, 85, 0.08);
  border-radius: 1rem;
}
.card-img {
  border-radius: 0.5rem;
  margin-bottom: 1rem;
}
.card-tag {
  font-size: 0.625rem;
  font-weight: bold;
  padding: 0.375rem 1rem;
  border-radius: 1rem;
  color: #7c19ee;
  background-color: #f2eafd;
}
.card-title {
  font-size: 1.125rem;
  font-weight: bold;
  margin-top: 1rem;
  margin-bottom: 0.375rem;
  color: #20293a;
}
.card-description {
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 300;
}
.card-creator {
  font-size: 0.75rem;
  padding-bottom: 0.25rem;
}
.card-creator::before {
  content: "";
  display: block;
  width: 23rem;
  margin: 1.25rem -1rem;
  border: 0.0625rem solid #e5eaf0;
}

